# nifty_500_momentum

./: .gitignore  README.md  requirements.in
docs/: momentum_filtering_strategies.md  motivation.md  references.md  (+1 more)
modules/: pyproject.toml
modules/src/nifty_500_momentum/analysts/: base_workflow.py  news_model.py  state.py
modules/src/nifty_500_momentum/analysts/analyzers/: __init__.py  base.py  comprehensive.py  market_drivers.py
modules/src/nifty_500_momentum/analysts/final_shortlist/: __init__.py  base.py  comprehensive.py
modules/src/nifty_500_momentum/analysts/news_filters/: __init__.py  filter.py  source_blacklist_filter.py  time_recency_filter.py
modules/src/nifty_500_momentum/analysts/workflows/: straightforward.py
modules/src/nifty_500_momentum/data/: config.py  interfaces.py  manager.py  nifty_500_tickers.py  storage.py
modules/src/nifty_500_momentum/data/collectors/: base_collector.py  news_collector.py  run_manager.py  stocks_collector.py
modules/src/nifty_500_momentum/data/sources/: __init__.py  gnewsrss.py  yfin.py
modules/src/nifty_500_momentum/evals/fin_performance/: base_criteria.py  evaluator.py  nuanced_criteria.py  simple_criteria.py
modules/src/nifty_500_momentum/evals/laaj/: evaluation.py  judge.py  prompt.py
modules/src/nifty_500_momentum/llm/: __init__.py  base.py  logger.py  openai.py
modules/src/nifty_500_momentum/static/: __init__.py  indicators.py  shortlister.py
modules/src/nifty_500_momentum/static/strategies/: __init__.py  base.py  explosive_breakout.py  golden_momentum.py  reversal_hunter.py  trendsurfer.py
(+11 files in other folders)
