[project]
name = "nifty-500-momentum"
version = "0.1.0"
description = "Modules for Nifty 500 Momentum Strategy"
authors = [
    { name="Aditya Anurag", email="a.anurag1024@gmail.com" }
]
dependencies = [
    "numpy",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["nifty_500_momentum*"]